<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#000000">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Textviewemail"
        android:background="#ffffff"
        android:layout_margin="30dp" 
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Textviewpassword" 
        android:background="#ffffff"
        android:layout_margin="30dp"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/btnsubmitlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_submit" 
        android:layout_margin="30dp"
         android:background="#ffffff"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btncancellogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_cancel"
        android:layout_margin="30dp" 
         android:background="#ffffff"
        android:textSize="30sp"/>

</LinearLayout>
